// Copyright (c) 2016-present, Facebook, Inc.
// All rights reserved.
//
// This source code is licensed under the BSD-style license found in the
// LICENSE file in the root directory of this source tree. An additional grant
// of patent rights can be found in the PATENTS file in the same directory.
syntax = "proto3";

package magma.orc8r.dnsd;
option go_package = "protos";


// All config fields are required unless otherwise indicated.

// On network creation or gateway registration, default configs will be applied
// (x-ref defaults.go) which will apply sensible defaults to most fields.
// A config update may be needed as a follow-up.


message NetworkDNSConfig {
  bool EnableCaching = 1;
  int32 LocalTTL = 2;
  repeated NetworkDNSConfigRecordsItems Records = 3;
}

message NetworkDNSConfigRecordsItems {
  repeated string ARecord = 1;
  repeated string AaaaRecord = 2;
  repeated string CnameRecord = 3;
  string Domain = 4;
}
